@@ -12,10 +12,8 @@ See ToDoSSE
 ----
 + Better syntax as well as SQL-like: GROUP BY ... WITH ... ??
 
-+ Tidy up : arq.sse_ commands need finishing
-  Except sse_query which needs the Q parsing moved into ModQueryIn.
-  ModQueryIn needs to work on algebra expressions?
-  Or a "Query" that is the algebra wrapped up. 
++ Tidy up : arq.sse_* commands need finishing
+  ModQueryIn needs to work on algebra expressions as well?
 
 + Results set to note when finished and warn on attempted continued use.
 
